--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -17,7 +17,7 @@
             <option value="">All</option>
         </select>
 
-        Title: <input type="text" name="SearchString" />
+        Title: <input type="text" name="SearchString" asp-for="SearchString"/>
         <input type="submit" value="Filter" />
     </p>
 </form>
@@ -36,6 +36,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Price)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Movies[0].Rating)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -53,6 +56,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rating)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
